--- a/src/app/editor/footer/footer.component.html
+++ b/src/app/editor/footer/footer.component.html
@@ -1,8 +1,7 @@
-<div>
-  <mat-divider style="clear:both"></mat-divider>
-  <p style="float: left; width: 34%; text-align: left;">
-    Version {{complexRelatorio.cover["version"]}} {{complexRelatorio.cover["remarks"]}}</p>
-  <p style="float: left; width: 33%; text-align: center;">{{complexRelatorio.cover["classification"]}}</p>
-  <p style="float: left; width: 33%; text-align: right;">Page </p>
-</div>
+<mat-divider style="clear:both"></mat-divider>
+<p></p>
+<a style="float: left; width: 34%; text-align: left;">
+  Version {{complexRelatorio.cover["version"]}} {{complexRelatorio.cover["remarks"]}}</a>
+<a style="float: left; width: 33%; text-align: center;">{{complexRelatorio.cover["classification"]}}</a>
+<p style="float: left; width: 24%; text-align: right;"></p>
 
