--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,8 @@
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
-<app-projects></app-projects>
+<app-repository></app-repository>
+<!--<app-projects></app-projects>-->
 <!--<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">-->
 <!--  &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;-->
 <!--  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>-->
